# ScreencastRefiner

./: .gitignore  pyproject.toml
src/: __init__.py  ingest_video.py  orchestrator.py
src/common/: __init__.py  connection.py  static.py  step_decorator.py  utils.py
src/steps/: STEP_10_00_video_preprocessing.py  STEP_20_00_fetch_transcription.py  STEP_30_00_make_scenes.py  STEP_40_00_make_video_clips.py  STEP_50_00_generate_audio.py  STEP_60_00_add_voiceover.py  STEP_70_00_composite_video.py  __init__.py
